agregado de funcion para que tome los javafx